Fix overflow for hotel-card-price-container, rating-container,  pagination-link

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1378,6 +1378,7 @@ html {
 .hotel-card-price-container {
   display: flex;
   justify-content: space-between;
+  gap: 20px;
   margin-bottom: 16px;
 }
 
@@ -1473,6 +1474,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 20px;
 }
 
 .star-icon {
@@ -1507,8 +1509,8 @@ html {
   color: #FFFFFF;
   background-color: #82B3D3;
   display: block;
-  width: 60px;
-  height: 60px;
+  min-width: 60px;
+  min-height: 60px;
   border-radius: 4px;
   text-align: center;
   padding: 12px 0;
